# diffuse

./: Cargo.toml  README.md
docs/: index.html  search-index.js  settings.html  source-files.js
docs/arctk/: all.html  index.html
docs/arctk/err/: enum.Error.html
docs/arctk/file/: index.html
docs/diffuse/: all.html  index.html  sidebar-items.js
docs/diffuse/input/: index.html  sidebar-items.js
docs/diffuse/output/: index.html  sidebar-items.js
docs/diffuse/parts/: index.html  sidebar-items.js
docs/diffuse/sim/: index.html  sidebar-items.js
docs/nalgebra/: struct.Complex.html  trait.Field.html  trait.SimdBool.html  trait.SimdComplexField.html  trait.SimdPartialOrd.html  trait.SimdRealField.html
docs/palette/named/: constant.ALICEBLUE.html  constant.ANTIQUEWHITE.html  constant.AQUA.html  constant.AQUAMARINE.html  constant.AZURE.html  constant.BEIGE.html  constant.BISQUE.html  constant.BLACK.html  constant.BLANCHEDALMOND.html  constant.BLUE.html  constant.BLUEVIOLET.html  constant.BROWN.html  constant.BURLYWOOD.html  constant.CADETBLUE.html  (+134 more)
docs/typenum/: macro.op.html  type.False.html  type.N1.html  type.N10.html  type.N100.html  type.N1000.html  type.N10000.html  type.N100000.html  type.N1000000.html  type.N10000000.html  type.N100000000.html  type.N1000000000.html  type.N10000000000.html  type.N100000000000.html  type.N1000000000000.html  type.N10000000000000.html  type.N100000000000000.html  type.N1000000000000000.html  type.N10000000000000000.html  type.N100000000000000000.html  type.N1000000000000000000.html  type.N1001.html  type.N1002.html  type.N1003.html  type.N1004.html  type.N1005.html  type.N1006.html  type.N1007.html  type.N1008.html  type.N1009.html  type.N101.html  type.N1010.html  type.N1011.html  type.N1012.html  type.N1013.html  type.N1014.html  type.N1015.html  type.N1016.html  type.N1017.html  type.N1018.html  (+3239 more)
input/: parameters.json5
input/settings/: standard.json5
output/: 000100ms.nc  000200ms.nc  000300ms.nc  000400ms.nc  000500ms.nc  000600ms.nc  000700ms.nc  000800ms.nc  000900ms.nc  001000ms.nc
scripts/: gen_docs.sh
src/: lib.rs
src/input/: mod.rs  settings.rs
src/output/: data.rs  mod.rs
src/parts/: mod.rs
src/sim/: mod.rs  settings.rs  system.rs
(+3431 files in other folders)
